<resources>
    <string name="app_name">Timring Timkwali</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="users">Users</string>
    <string name="a_list_of_users">A List Of Users</string>
    <string name="user_full_name">User Full Name</string>
    <string name="date_created">Date Created</string>
    <string name="gender">Gender</string>
    <string name="countries">Countries</string>
    <string name="colors">Colors</string>
    <string name="cars">Cars</string>
    <string name="a_list_of_cars">A List Of Cars</string>
    <string name="filters">Filters</string>
    <string name="_1">1</string>
    <string name="car_details">Car Details: </string>
    <string name="car_model">Car Model:</string>
    <string name="year">Year:</string>
    <string name="color">Color:</string>
    <string name="country">Country:</string>
    <string name="serial_number">Serial Number</string>
    <string name="value">value</string>
    <string name="car_owner">Car Owner:</string>
    <string name="gender_">gender:</string>
    <string name="job_title">Job Title:</string>
    <string name="email">Email</string>
    <string name="bio">Bio:</string>
    <string name="email_">Email:</string>
    <string name="check_network_connection">Check Your Network Connection</string>
    <string name="applied_filter">Applied Filter</string>

    //CAR LIST FILTER
    <string-array name="filters">
        <item>Car</item>
        <item>Owner</item>
        <item>Gender(Male)</item>
        <item>Gender(Female)</item>
    </string-array>
</resources>