<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.userdetails.UserDetailsFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/userDetails_back_iv"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@color/white"
        android:elevation="2dp"
        android:src="@drawable/ic_back"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/curved_image" />

    <ImageView
        android:id="@+id/userDetails_mainBg_iv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/train_station"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_vw"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="1dp"
        android:background="@drawable/white_view_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/userDetails_card_cv"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:cardCornerRadius="40dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/black">

        <ImageView
            android:id="@+id/userDetails_avatar_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/person_pic"
            android:scaleType="fitCenter"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/userDetails_userFullName_tv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:elevation="2dp"
        android:fontFamily="@font/graphit_bold"
        android:gravity="center"
        android:paddingHorizontal="5dp"
        android:text="@string/user_full_name"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/userDetails_card_cv"
        app:layout_constraintHorizontal_bias="0.656"
        app:layout_constraintStart_toStartOf="@+id/view_vw"
        app:layout_constraintTop_toTopOf="@+id/guideline1" />

    <TextView
        android:id="@+id/userDetails_gender_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/graphit_regular"
        android:elevation="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:gravity="center_vertical"
        android:drawablePadding="10dp"
        app:drawableStartCompat="@drawable/gender"
        app:layout_constraintStart_toStartOf="@+id/view_vw"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/userDetails_dateCreated_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/graphit_regular"
        android:text="@string/date_created"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:elevation="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:gravity="center_vertical"
        android:drawablePadding="10dp"
        app:drawableStartCompat="@drawable/calendar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userDetails_gender_tv" />

    <TextView
        android:id="@+id/userDetails_countries_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/graphit_regular"
        android:text="@string/countries"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:elevation="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:gravity="center_vertical"
        android:drawablePadding="10dp"
        app:drawableStartCompat="@drawable/globe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userDetails_dateCreated_tv" />

    <TextView
        android:id="@+id/userDetails_colors_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/graphit_regular"
        android:text="@string/colors"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:elevation="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:gravity="center_vertical"
        android:drawablePadding="10dp"
        app:drawableStartCompat="@drawable/pallete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userDetails_countries_tv" />
</androidx.constraintlayout.widget.ConstraintLayout>